# seika-examples

./: .gitignore  CMakeLists.txt  vcpkg.json
examples/simple_inputs/: CMakeLists.txt
examples/simple_inputs/src/: main.c
examples/simple_window/: CMakeLists.txt
examples/simple_window/src/: main.c
examples/zig_example/: CMakeLists.txt  README.md  build.zig  build.zig.zon
examples/zig_example/src/: main.zig
src/: main.c
